20011217 Crypt-Tea-1.30 Tiny Encryption Algorithm in Perl & JavaScript
20020121 1.31 some bugs fixed, Htauth hooks & outdated subs stripped
20020310 1.32
20020325 1.33 Bug fixed in JS ascii decoding
20020403 1.34 Htauth hooks removed into CGI::Htauth.pm
20020523 1.35 mv Tea.raw Tea.pm for CPAN, include test.html
20020601 1.36 fixed 'require Tea.raw' bug in test_script
20020603 1.40 Makefile.PL uses MakeMaker, new Install
20020620 1.41 my $de0, $de1 bug fixed in line 182 of Tea.pm
20020626 1.42 Install gets default locations right
20020917 1.43 JS portability bug fixed in ascii2bytes, a[i] to a.charAt(i)
20020919 1.44 JS portability bug fixed in specifying 32-bit integers
20030701 FreeBSD bug corrected ($^O now gives freebsd)
20030901 Tea.pm pjb removed octal number literals from the JS
20040224 Crypt::Tea is now also named Crypt::Tea_PPJS, q.v.
20040809 'perl Install' works better on solaris without Term::Size
20040922 1.45 + changed to - to avoid URL-encoding, with backward compatibility
20040928 2.00 uses - in ascii for URL-resistance
20040930 2.01 test.html ascii2bytes should return 216 not 217
20041005 2.02 test.pl displays correct version
20041011 2.03 JS tea_code and tea_decode now work on Konqueror5.0
20041127 2.04 consistentised Term::Clui in Install