@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $bindir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '2.05';
+my $version = '2.06';
 ($libdir, $bindir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -257,10 +257,11 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 1920,
-		'Changes', 1279,
+		'Changes', 1404,
 		'MANIFEST', 90,
-		'Tea.pm', 30313,
+		'Tea.pm', 30350,
 		'bin/tea', 3109,
+		'examples/tea_demo.cgi', 4459,
 		'Clui', 27404,
 		'test.pl', 9918,
 	);
