@@ -22,7 +22,7 @@ that's all ! or you can still do it the old way ...
 For up-to-date source, see http://www.cpan.org/SITES.html
 and look for the directory authors/id/P/PJ/PJB
 
-This is version 2.05.
+This is version 2.06.
 
 Version 1.45 will probably be the final version in the 1.xx branch.
 It is stable, and fully compatible with earlier versions.
