@@ -81,7 +81,7 @@ JavaScript code which offers identical functions in JS, and this can
 be used by GCIs to feed to the browser.  Triple encryption will be
 offered later.
 
-Version 2.05,
+Version 2.06,
 #COMMENT#
 
 =head1 AUTHOR
